[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/Roboto-Medium.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ui/HUD/HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 55
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="EnemyScoreLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 20.0
margin_top = -170.0
margin_right = 150.0
margin_bottom = -110.0
custom_fonts/font = SubResource( 2 )
text = "Enemy 
Score: 0"

[node name="PlayerScoreLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 20.0
margin_top = 110.0
margin_right = 150.0
margin_bottom = 170.0
rect_pivot_offset = Vector2( 1194, 262 )
custom_fonts/font = SubResource( 2 )
text = "Your 
Score: 0"

[node name="DrawButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -17.5
margin_right = -20.0
margin_bottom = 17.5
custom_fonts/font = SubResource( 2 )
text = "Draw!"

[node name="NewGameButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -145.0
margin_top = -65.0
margin_right = -20.0
margin_bottom = -30.0
custom_fonts/font = SubResource( 2 )
text = "New Game"

[node name="InfoLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -140.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 1 )
autowrap = true

[node name="MessageLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 160.0
margin_top = -66.0
margin_right = -160.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1
autowrap = true

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.5

[connection signal="pressed" from="DrawButton" to="." method="_on_DrawButton_pressed"]
[connection signal="pressed" from="NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
